turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:26: error: not found: value L
        }else if (rule(i)==L){
                           ^