turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {
  if (getCouleurSol()==colors(colors.length)){
    if (rule(colors.length)=="R"){
      droite()
      avance()
      setCouleurBrosse(colors(0))
      baisseBrosse()
      leveBrosse()
    }
    else if (rule(colors.length)=="L"){
      gauche()
      avance()
      setCouleurBrosse(colors(0))
      baisseBrosse()
      leveBrosse()
    }
    else{
      for (i<-0 to colors.length-2){
        if (rule(i)=="R"){
          droite()
          avance()
          setCouleurBrosse(colors(i+1))
          baisseBrosse()
          leveBrosse()
        }else if (rule(i)==L){
          setCouleurBrosse(colors(i+1))
          gauche()
          avance()
          baisseBrosse()
          leveBrosse()
        }
      }
    }
  }
}